--- a/package.json
+++ b/package.json
@@ -21,14 +21,24 @@
     "gulp-cache": "^0.4.6",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
+    "gulp-debug": "^3.1.0",
+    "gulp-foal": "^1.1.2",
+    "gulp-ftp": "^1.1.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sftp": "^0.1.5",
+    "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^2.0.1",
-    "gulp-webserver": "^0.9.1"
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
+    "gulp-webserver": "^0.9.1",
+    "gulp-zip": "^4.0.0",
+    "imagemin-pngquant": "^5.0.0"
   }
 }
