--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-jshint": "^2.0.4",
+    "gulp-eslint": "^4.0.1",
     "jshint": "^2.9.4"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "gulp-cache": "^0.4.6",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
+    "gulp-cssbeautify": "^0.1.3",
     "gulp-debug": "^3.1.0",
     "gulp-foal": "^1.1.2",
     "gulp-ftp": "^1.1.0",
