--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "李迪康",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.1",
     "jshint": "^2.9.4"
   },
   "dependencies": {
+    "browser-sync": "^2.23.6",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.6",
     "gulp-clean": "^0.3.2",
