--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,9 @@
   "parserOptions": {
     "sourceType": "module"
   },
+  "plugins": [
+    "jquery"
+  ],
   "rules": {
     "indent": [
       "error",
