--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.23.6",
+    "eslint-plugin-jquery": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.1",
     "jshint": "^2.9.4"
