--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "李迪康",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.6",
     "eslint-plugin-jquery": "^1.3.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-eslint": "^4.0.1",
     "jshint": "^2.9.4"
   },
