--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "前端自动化工具",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp",
+    "build": "gulp build",
+    "pack": "gulp build2"
   },
   "keywords": [
     "自动化，前端"
@@ -25,6 +27,7 @@
   },
   "dependencies": {
     "browser-sync": "^2.23.6",
+    "eslint-plugin-jquery": "^1.3.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.6",
     "gulp-clean": "^0.3.2",
