--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp",
+    "clean": "gulp clean",
     "build": "gulp build",
-    "pack": "gulp build2"
+    "clean": "gulp clean",
   },
   "keywords": [
     "自动化，前端"
