--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,26 +6,11 @@
   "parserOptions": {
     "sourceType": "module"
   },
-  "plugins": [
-    "jquery"
-  ],
+  "plugins": ["jquery"],
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "never"
-    ],
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "semi": ["error", "never"],
     "no-console": "off"
   }
 }
