--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "gulp",
     "clean": "gulp clean",
-    "build": "gulp build",
-    "clean": "gulp clean",
+    "build": "gulp build"
   },
   "keywords": [
     "自动化，前端"
@@ -28,7 +27,6 @@
   },
   "dependencies": {
     "browser-sync": "^2.23.6",
-    "eslint-plugin-jquery": "^1.3.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.6",
     "gulp-clean": "^0.3.2",
@@ -42,9 +40,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-rev-timestamp": "^0.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sftp": "^0.1.5",
     "gulp-tinypng": "^1.0.2",
@@ -52,7 +48,6 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "gulp-webserver": "^0.9.1",
-    "gulp-zip": "^4.0.0",
-    "imagemin-pngquant": "^5.0.0"
+    "gulp-zip": "^4.0.0"
   }
 }
